Bug 739884 - decomtaminate impl of UnselectRow() and UnselectCol() on accessible tables, r=surkov